parser/src/parser/snapshots/enderpy__parser__parser__tests__parse_assignment-15.snap
---
source: src/parser/parser.rs
description: a = b = 1
---
Module {
    node: Node {
        start: 0,
        end: 9,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 9,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    Name(
                        Name {
                            node: Node {
                                start: 4,
                                end: 5,
                            },
                            id: "b",
                        },
                    ),
                ],
                value: Constant(
                    Constant {
                        node: Node {
                            start: 8,
                            end: 9,
                        },
                        value: Int(
                            "1",
                        ),
                    },
                ),
            },
        ),
    ],
}
