parser/src/parser/snapshots/enderpy__parser__parser__tests__parse_assignment-16.snap
---
source: src/parser/parser.rs
description: "a,b = c,d = 1,2"
---
Module {
    node: Node {
        start: 0,
        end: 15,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 15,
                },
                targets: [
                    Tuple(
                        Tuple {
                            node: Node {
                                start: 0,
                                end: 3,
                            },
                            elements: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 0,
                                            end: 1,
                                        },
                                        id: "a",
                                    },
                                ),
                                Name(
                                    Name {
                                        node: Node {
                                            start: 2,
                                            end: 3,
                                        },
                                        id: "b",
                                    },
                                ),
                            ],
                        },
                    ),
                    Tuple(
                        Tuple {
                            node: Node {
                                start: 6,
                                end: 9,
                            },
                            elements: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 6,
                                            end: 7,
                                        },
                                        id: "c",
                                    },
                                ),
                                Name(
                                    Name {
                                        node: Node {
                                            start: 8,
                                            end: 9,
                                        },
                                        id: "d",
                                    },
                                ),
                            ],
                        },
                    ),
                ],
                value: Tuple(
                    Tuple {
                        node: Node {
                            start: 12,
                            end: 15,
                        },
                        elements: [
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 12,
                                        end: 13,
                                    },
                                    value: Int(
                                        "1",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 14,
                                        end: 15,
                                    },
                                    value: Int(
                                        "2",
                                    ),
                                },
                            ),
                        ],
                    },
                ),
            },
        ),
    ],
}
